tests/ui/borrowck/suggestions/overloaded-index-without-indexmut.stderr
error[E0596]: cannot borrow `*y` as mutable, as it is behind a `&` reference
  --> $DIR/overloaded-index-without-indexmut.rs:14:5
   |
LL |     y.push_str("");
   |     ^ `y` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
